fix text overflow on card

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,8 @@ a {
     position: absolute;
     bottom: 0;
     left: 0;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .item h2, .item h3 {
